--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -265,7 +265,9 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a person. Hello!</p>
+<p>I&rsquo;m a fifth-year graduate student, working primarily with <a href="http://people.virginia.edu/~tdw/" target="_blank">Tim Wilson</a>, <a href="http://people.virginia.edu/~so5x/me2.htm" target="_blank">Shige Oishi</a>, <a href="http://people.virginia.edu/~gc4q/index.php/people/48-gerald-l-clore.html" target="_blank">Jerry Clore</a>, and <a href="http://projectimplicit.net/nosek/" target="_blank">Brian Nosek</a>.</p>
+
+<p>I get to work with <a href="https://twitter.com/cksoderberg?lang=en" target="_blank">many</a> <a href="https://erincwestgate.weebly.com/" target="_blank">other</a> <a href="https://osf.io/f4xnz/" target="_blank">people</a> <a href="http://jordanaxt.com/" target="_blank">who</a> <a href="https://samanthaheintzelman.com/" target="_blank">are</a> <a href="https://psychology.as.virginia.edu/people/profile/dkb5db" target="_blank">far</a> <a href="https://psychology.as.virginia.edu/people/profile/hb3hu" target="_blank">more</a> <a href="https://motivatelab.org/stephanie-wormington/" target="_blank">interesting</a> <a href="http://www.virginia.edu/psychology/socialpsych/profiles.html" target="_blank">than</a> I am.</p>
 
 
     <div class="row">
