--- a/public/404.html
+++ b/public/404.html
@@ -250,6 +250,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/nbh2018/">Evaluating the replicability of social science experiments in Nature and Science between 2010 and 2015</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/jpsp2018/">Cross-cultural consistency and relativity in the enjoyment of thinking versus doing</a></li>
   </ul>
   
@@ -265,15 +269,15 @@
     <li><a href="/publication/compass2017/">The psychological consequences of income inequality</a></li>
   </ul>
   
-  <ul>
-    <li><a href="/publication/jep2016/">New directions in social psychological interventions to improve academic achievement</a></li>
-  </ul>
-  
   
 
   
   
   <h2>Talks</h2>
+  
+  <ul>
+    <li><a href="/talk/spsp2019/">Guns as a Coping Mechanism</a></li>
+  </ul>
   
   <ul>
     <li><a href="/talk/aps2018/">Higher Population Density and Lower Meaning in Life</a></li>
