--- a/public/404.html
+++ b/public/404.html
@@ -250,6 +250,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/ampsy2018/">The socio-ecological psychology of upward social mobility</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/nbh2018/">Evaluating the replicability of social science experiments in Nature and Science between 2010 and 2015</a></li>
   </ul>
   
@@ -263,10 +267,6 @@
   
   <ul>
     <li><a href="/publication/motem2017/">You can do it if you really try: The effects of motivation on thinking for pleasure</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/compass2017/">The psychological consequences of income inequality</a></li>
   </ul>
   
   
