--- a/public/publication/advances2019/index.html
+++ b/public/publication/advances2019/index.html
@@ -380,6 +380,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1016/bs.aesp.2019.05.001" target="_blank" rel="noopener">
+  Article
+</a>
+
 
 
           </div>
@@ -405,7 +409,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2019 &middot; 
+      &copy; 2020 &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
