--- a/public/publication/ampsy2018/index.html
+++ b/public/publication/ampsy2018/index.html
@@ -376,6 +376,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="http://dx.doi.org/10.1037/amp0000422" target="_blank" rel="noopener">
+  Article
+</a>
+
 
 
           </div>
@@ -401,7 +405,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2019 &middot; 
+      &copy; 2020 &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
