--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Graduate Student in Social Psychology">
+  <meta name="description" content="Postdoctoral Research Associate">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -88,7 +88,7 @@
   <meta property="og:site_name" content="Nick Buttrick">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Nick Buttrick">
-  <meta property="og:description" content="Graduate Student in Social Psychology">
+  <meta property="og:description" content="Postdoctoral Research Associate">
   <meta property="og:locale" content="en-us">
   
   
@@ -250,23 +250,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/ampsy2018/">The socio-ecological psychology of upward social mobility</a></li>
+    <li><a href="/publication/ampsy2021/">The cultural dynamics of declining residential mobility</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/nbh2018/">Evaluating the replicability of social science experiments in Nature and Science between 2010 and 2015</a></li>
+    <li><a href="/publication/ijp2021/">Well-being in the time of COVID-19: Metaphors matter</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/jpsp2018/">Cross-cultural consistency and relativity in the enjoyment of thinking versus doing</a></li>
+    <li><a href="/publication/sr2021/">Perceived economic risk (vs. health risk) motivates individual efforts to fight COVID‐19: a multilevel analysis in 24 countries</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/cop2017/">Income inequality and well-being</a></li>
+    <li><a href="/publication/emo2020/">What makes thinking for pleasure pleasurable?</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/motem2017/">You can do it if you really try: The effects of motivation on thinking for pleasure</a></li>
+    <li><a href="/publication/app2020/">“I’ll try the veggie burger”: Increasing purchases of sustainable foods with information about sustainability and taste</a></li>
   </ul>
   
   
@@ -274,6 +274,10 @@
   
   
   <h2>Talks</h2>
+  
+  <ul>
+    <li><a href="/talk/spsp2020/">&#39;A True Friend with Six Hearts&#39; - Using Firearms to Cope with Psychological Threat</a></li>
+  </ul>
   
   <ul>
     <li><a href="/talk/spsp2019/">Guns as a Coping Mechanism</a></li>
@@ -304,7 +308,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018 &middot; 
+      &copy; 2020 &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
